# convergence

./: .gitignore  LICENSE  README.md  convergence-deck.html  index.html  pyproject.toml
.chp/: ADVERSARIAL_PROMPTS.md  CHP_COMPLIANCE.md  R0_CONFIG.yaml  STATE_MACHINE.md
docs/: SUPERSET_INTEGRATION.md
src/convergence/: __init__.py
src/convergence/api/: __init__.py  main.py
src/convergence/api/routes/: workstreams.py
src/convergence/audit/: __init__.py  ledger.py
src/convergence/chp/: __init__.py  accuracy.py  dossier.py  foundation.py  gates.py  models.py  orchestrator.py  parity.py  registry.py  rounds.py  validators.py
src/convergence/control_tower/: __init__.py
src/convergence/convergence_tower/: __init__.py
src/convergence/db/: __init__.py  connection.py
src/convergence/inference/: __init__.py  client.py
src/convergence/mesh/: __init__.py  agent.py  bridge.py  context.py  orchestrator.py  playbook.py  protocol.py
src/convergence/stigmergy/: __init__.py  board.py  ledger.py
src/convergence/workstreams/: __init__.py  base.py  close_harmonization.py  coa_mapping.py  synergy_tracking.py  systems_integration.py
terraform/: main.tf
tests/: test_convergence.py  test_stigmergy.py
